LAZYCC-67 Bug Fixing: the table bottom does not fit in the container.

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -4,7 +4,7 @@
 
 body {
   background: #1B213B;
-  color: #777;
+  color: #bfbfbf;
   font-family: Montserrat, Arial, sans-serif;
 }
 
@@ -51,7 +51,7 @@ h1, h2, h3, h4, h5, h6, strong {
 }
 .titles {
   font-size: 1rem;
-  color: #f3f4faa6;
+  color:#969696;
   margin-bottom: 10px;
 }
 .row div {
@@ -81,14 +81,9 @@ h1, h2, h3, h4, h5, h6, strong {
   padding-bottom: 15px;
 }
 
-#table_container {
-  height: 100%;
-}
-
 /* Scrollbar Settings */
 .scrollbar {
   float: left;
-  height: 300px;
   width: 100%;
   overflow-y: scroll;
 }
